More interesting hero

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -27,7 +27,7 @@ $font-family-headers: "Proxima Nova Bold", sans-serif;
 $brand-primary: #2cd6ca;
 $bt-brand-primary: #2cd6ca;
 $bt-brand-secondary: #1D2D3F;
-$bt-brand-secondary-light: #23364C;
+$bt-brand-secondary-light: #233d53;
 $bt-dark-green: #14635d;
 $bt-navy-light: #384f68;
 $bt-brand-orange: #fb9d43;
