--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -38,7 +38,7 @@
   }
   .hero-inner {
     padding-top: 0.1rem;
-    padding-bottom: 12rem;
+    padding-bottom: 10%;
     background-color: $bt-brand-secondary-light;
     background: linear-gradient(to right, $bt-brand-secondary-light, #1d2d3e);
     &:after {
