--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -16,7 +16,6 @@
   }
 }
 .hero {
-  min-height: calc(100vh);
   button {
     height: 50px;
   }
@@ -49,6 +48,7 @@
   }
   .companies {
     h2 {
+      margin-top: -1px;
       margin-bottom: 10px;
       font-size: 22px;
     }
