--- a/styles/project/_PricingPage.scss
+++ b/styles/project/_PricingPage.scss
@@ -1,19 +1,21 @@
 .pricing {
-	background:#f9f9f9;
+	background: #f9f9f9;
 }
 
-.pricing-panel{
-	padding-left:8px;
-	padding-right:8px;
-	margin-bottom:20px;
-align-self: stretch;
-	.panel{
+.pricing-panel {
+	padding-left: 8px;
+	padding-right: 8px;
+	margin-bottom: 20px;
+	align-self: stretch;
+
+	.panel {
 		height: 100%;
-		overflow:hidden;
+		overflow: hidden;
 	}
-	.panel-content{
-		background-size:contain;
-		padding:10px 10px 20px;
+
+	.panel-content {
+		background-size: contain;
+		padding: 10px 10px 20px;
 		text-align: center;
 	}
 }
@@ -21,31 +23,31 @@ align-self: stretch;
 .pricing-features {
 	padding: 0;
 	margin-left: 20px;
-	margin-bottom:5px;
+	margin-bottom: 5px;
 
-	li{
-		opacity: 0.75;
-
-		p{
-			margin-bottom:2px;
-			font-size:13px;
+	li {
+		p {
+			margin-bottom: 2px;
+			font-size: 13px;
 		}
 	}
 }
+
 .pricing-type {
 	color: #22354a;
 	margin-bottom: 0;
-	font-size:1.75em;
+	font-size: 1.75em;
 	text-align: center;
-	font-weight:bold;
+	font-weight: bold;
 }
+
 .pricing-price {
 	margin-bottom: 4px;
-	font-size:1.35em;
+	font-size: 1.35em;
 	text-align: center;
 }
 
-.featured{
+.featured {
 	color: #2cd6ca;
 	text-transform: uppercase;
 	font-size: 14px;
@@ -56,72 +58,69 @@ align-self: stretch;
 	height: 24px;
 }
 
-.pricing-cta{
-	width:80%;
+.pricing-cta {
+	width: 80%;
 	min-width: 170px;
-	background:#2cd6ca;
-	margin:0 auto;
-	height:40px;
+	background: #2cd6ca;
+	margin: 0 auto;
+	height: 40px;
 	border-radius: 25px;
-	color:#fff;
-	padding:8px 30px 10px;
+	color: #fff;
+	padding: 8px 30px 10px;
 	display: block;
 	text-align: center;
 
-	&.blue{
-		background:#22354a;
-		color:#fff !important;
+	&.blue {
+		background: #22354a;
+		color: #fff !important;
 	}
 
-	&:hover{
-		color:#fff;
+	&:hover {
+		color: #fff;
 		text-decoration: none;
-		box-shadow:0 1px 10px 0 rgba(0,0,0,0.2);
+		box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
 	}
-
-
 }
 
-.pricing-icon{
-	width:75px;
-	margin:10px auto;
+.pricing-icon {
+	width: 75px;
+	margin: 10px auto;
 }
 
-.panel-footer{
-	background:#f7f7f7;
-	padding:10px;
+.panel-footer {
+	background: #f7f7f7;
+	padding: 10px;
 	text-align: left;
 }
 
-.panel-grey{
+.panel-grey {
 	background: #F5F8FD;
 	border-radius: 8px;
 	padding: 20px;
 	margin-bottom: 20px;
 
-	.question{
-		font-weight:bold;
-		margin-bottom:5px;
+	.question {
+		font-weight: bold;
+		margin-bottom: 5px;
 	}
 
-	.answer{
+	.answer {
 		font-size: 15px;
-		opacity: 0.65;
 
-		&:last-of-type{
-			margin-bottom:0;
+		&:last-of-type {
+			margin-bottom: 0;
 		}
 	}
 }
 
-.faq{
-	padding:60px 0;
+.faq {
+	padding: 60px 0;
 }
 
-.cta-container{
-	margin-top:60px;
+.cta-container {
+	margin-top: 60px;
 
-	a{
-		width:300px;
+	a {
+		width: 300px;
 	}
 }
