--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -145,3 +145,10 @@ hr {
     margin-left: 10px;
     font-size: 1.5em;
 }
+
+.modal-title {
+    h3 {
+        font-size: 24px;
+        margin-bottom: 0;
+    }
+}
