--- a/styles/3rdParty/_bootstrap.scss
+++ b/styles/3rdParty/_bootstrap.scss
@@ -33,8 +33,8 @@
 //@import "~bootstrap/scss/progress";
 @import "~bootstrap/scss/media";
 //@import "~bootstrap/scss/list-group";
-//@import "~bootstrap/scss/close";
-//@import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/close";
+@import "~bootstrap/scss/modal";
 //@import "~bootstrap/scss/tooltip";
 //@import "~bootstrap/scss/popover";
 //@import "~bootstrap/scss/carousel";
@@ -57,3 +57,145 @@
     }
   }
 }
+
+
+.modal{
+  .close {
+    color: white;
+    text-shadow: none;
+    opacity: 1;
+    margin-top: -15px;
+  }
+  z-index: 100000;
+  .modal-content {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    box-shadow: rgba(75, 75, 75, 0.21) 0px 1px 6px, rgba(75, 75, 75, 0.21) 0px 1px 4px;
+    border: none;
+  }
+  .modal-header{
+    background: #1e2f41;
+    color:#fff!important;
+    font-weight: bold;
+    font-family: $headings-font-family;
+    border-radius: 4px 4px 0 0;
+    font-size: 18px;
+    line-height: 18px;
+    letter-spacing: 0.8px;
+    -webkit-font-smoothing:antialiased;
+    text-transform: capitalize;
+
+  }
+
+  .modal-body{
+    .input-container{
+      input.input{
+        border-color: rgb(224, 224, 224) !important;
+        //border-radius:25px;
+        color:#2e2e2e;
+
+        &::placeholder{
+          color:#2e2e2e;
+          opacity:0.5;
+        }
+      }
+
+      textarea {
+        border: 1px solid rgb(224, 224, 224) !important;
+      }
+      &.invalid>input {
+        border-color: $alert-danger-border!important;
+      }
+    }
+  }
+}
+$side-width: 66%;
+.side-modal {
+  overflow-y: hidden!important;
+  .close {
+    position: absolute;
+    top: -40px;
+    right: 20px;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  .modal-body {
+    padding: 0;
+    height: 100%;
+  }
+  z-index: 20000000000;
+  padding-left:0;
+  left: 0;
+  right:0;
+  top:0;
+  bottom:0;
+  opacity: 1;
+  .modal-header {
+    border-radius: 0;
+    text-align: left;
+    font-weight: bold;
+  }
+  .modal-dialog {
+    box-shadow:rgba(75, 75, 75, 0.11) 0px 1px 6px 0px, rgba(75, 75, 75, 0.11) 0px 1px 4px 0px;
+    transition: transform .2s ease-out;
+    transform: translate(100%, 0%) !important;
+    position: absolute;
+    max-width:1000px;
+    width:$side-width !important;
+    height:100% !important;
+    max-height:100% !important;
+    margin:0;
+    right:0;
+    left: auto;
+  }
+  &.in {
+    .modal-dialog {
+      transform: translate(0%, 0%) !important;
+    }
+  }
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 20px;
+    height:130px;
+    background-color: white;
+  }
+  .modal-content {
+    border: none;
+    width: 100%;
+    height:100%;
+    border-radius: 0;
+  }
+  #create-feature-modal {
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: calc(100% - 190px);
+    overflow-y: scroll;
+  }
+}
+
+.disable-transitions {
+  .modal-dialog {
+    transition: none !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .modal {
+    .tab-icon {
+      font-size: 1em;
+      margin-right: 0.25em !important;
+    }
+    .tab-text {
+      font-size: .85em;
+    }
+  }
+
+}
+
+
+
+
