--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -120,7 +120,7 @@ $input-padding-y: 1rem !default;
 //MODALS
 $modal-backdrop-bg: rgba(0, 0, 0, 0.870588);
 $modal-header-border-width: 0;
-
+$border-radius-default: 0;
 //TRANSITIONS
 $button-transition: background-color 400ms cubic-bezier(0.23, 1, 0.32, 1);
 //Hero
