--- a/styles/project/_buttons.scss
+++ b/styles/project/_buttons.scss
@@ -1,3 +1,4 @@
+@import "../variables";
 a, .btn, button{
     outline:none;
 
@@ -6,20 +7,36 @@ a, .btn, button{
     }
 }
 .btn, button.btn{
-    background:linear-gradient(#2cd6ca,#48A69D);
-    border-radius: 8px!important;
+    outline: none !important;
+    background: #1c9997;
+    transition: $button-transition;
+    border-radius: $border-radius-default !important;
     color:#fff;
     text-align: center;
-    padding: 10px 20px;
-    font-weight: $bold;
-    font-size: 14px;
-    height:50px;
+    border: none !important;
+    padding: 0 20px;
+    letter-spacing: 0.8px;
+    line-height: $input-height;
+    -webkit-font-smoothing:antialiased;
+    text-transform: capitalize;
+    font-weight: 700;
+    font-size: 16px;
+    height:$input-height;
+    box-shadow:0 0 5px rgba(0,0,0,0.2);
 
-    &:hover{
-        background:linear-gradient(#2cd6ca,#48A69D);
+    &:hover, &:disabled:hover {
+        background: #29aaa8;
+    }
+    &:hover {
         box-shadow:0 0 10px rgba(0,0,0,0.5);
     }
-
+    &:disabled {
+        box-shadow: none;
+    }
+    &:active,&:focus{
+        background: #098783 !important;
+        box-shadow:0 0 10px rgba(0,0,0,0.5);
+    }
     &.white{
         background:#fff;
         color:black;
@@ -42,9 +59,9 @@ a, .btn, button{
         &:hover {
             box-shadow: none;
             background: white;
-            color: darken($brand-primary, 10);
+            color: darken($bt-brand-primary, 10);
         }
-        color: $brand-primary;
+        color: $bt-brand-primary;
     }
 
     &--condensed {
@@ -60,6 +77,7 @@ a, .btn, button{
         color:#2cd6ca;
         box-shadow: none;
         height:auto;
+        line-height: 1;
 
         &:hover{
             background:none;
@@ -92,11 +110,4 @@ a, .btn, button{
         border-bottom-left-radius:0!important;
         border-top-left-radius:0!important;
     }
-}
-
-.tabs-nav{
-    .btn{
-        borderradius:15px!important
-    }
-
 }
