--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,5 +1,8 @@
 @import "../variables";
 
+$google: #c53d23;
+$github: #eeefee;
+
 button.btn {
 	border-radius: $btn-border-radius;
 	box-shadow: rgba(75, 75, 75, 0.11) 0px 1px 6px, rgba(75, 75, 75, 0.11) 0px 1px 4px;
@@ -14,6 +17,52 @@ button.btn {
 	&:hover {
 		color: $btn-primary-color-hover;
 		background: $btn-primary-bg-hover;
+	}
+	&__oauth {
+		margin-right: 20px;
+		&:last-child {
+			margin-right: 0;
+		}
+		border-radius: $border-radius-default;
+		display: inline-block;
+		color: #000 !important;
+		font-weight: bold;
+		width: 260px;
+		&:hover {
+			text-decoration: none;
+		}
+		user-select: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+		-moz-user-select: none;
+		img {
+			height: 24px;
+		}
+		margin-top: 10px;
+		margin-bottom: 20px;
+		&--github {
+			background-color: $github;
+			&:hover {
+				background-color: darken($github, 5);
+			}
+		}
+		&--google {
+			background-color: $google !important;
+			color:white !important;
+			&:hover, &:active, &:focus {
+				background-color: lighten($google, 5) !important;
+			}
+		}
+		&--microsoft {
+			background-color: #339af4;
+			color: white !important;
+			&:hover {
+				background-color: #327ed6;
+			}
+			img{
+				height: 20px;
+			}
+		}
 	}
 }
 
