--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,24 +3,36 @@
 @import "~bootstrap/scss/variables";
 
 @font-face {
-  font-family: 'Proxima Nova';
-  src: url('/static/fonts/Proxima-Nova-Regular.woff');
-  font-display:swap;
+  font-family: 'ProximaNova-Regular';
+  src: url('/static/fonts/proxima-nova/ProximaNova-Regular.eot?') format('eot'),
+  url('/static/fonts/proxima-nova/ProximaNova-Regular.otf')  format('opentype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Regular.woff') format('woff'),
+  url('/static/fonts/proxima-nova/ProximaNova-Regular.ttf')  format('truetype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Regular.svg#ProximaNova-Regular') format('svg');
 }
+
 @font-face {
-  font-family: 'Proxima Nova';
-  src: url('/static/fonts/Proxima-Nova-Semibold.woff');
-  font-weight:bold;
-  font-display:swap;
+  font-family: 'ProximaNova-Black';
+  src: url('/static/fonts/proxima-nova/ProximaNova-Black.eot?') format('eot'),
+  url('/static/fonts/proxima-nova/ProximaNova-Black.otf')  format('opentype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Black.woff') format('woff'),
+  url('/static/fonts/proxima-nova/ProximaNova-Black.ttf')  format('truetype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Black.svg#ProximaNova-Black') format('svg');
 }
+
+
 @font-face {
-  font-family: 'Proxima Nova Bold';
-  src: url('/static/fonts/Proxima-Nova-Semibold.woff');
-  font-display:swap;
+  font-family: 'ProximaNova-Bold';
+  src: url('/static/fonts/proxima-nova/ProximaNova-Bold.eot?') format('eot'),
+  url('/static/fonts/proxima-nova/ProximaNova-Bold.otf')  format('opentype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Bold.woff') format('woff'),
+  url('/static/fonts/proxima-nova/ProximaNova-Bold.ttf')  format('truetype'),
+  url('/static/fonts/proxima-nova/ProximaNova-Bold.svg#ProximaNova-Bold') format('svg');
 }
+
 //Fonts
 $font-family: "Proxima Nova", sans-serif;
-$font-family-headers: "Proxima Nova Bold", sans-serif;
+$font-family-headers: 'ProximaNova-Bold', sans-serif;
 
 // COLORS
 
