--- a/styles/project/_type.scss
+++ b/styles/project/_type.scss
@@ -11,6 +11,12 @@ h1,h2,h3,h4,h5,h6{
     color: white;
 }
 
+.text {
+    &--green {
+        color: #2CA69D;
+    }
+}
+
 p{
     color: $body-text;
     line-height: 1.58;
