--- a/styles/project/_blog.scss
+++ b/styles/project/_blog.scss
@@ -52,6 +52,9 @@
             color: rgba(0, 0, 0, 0.84);
         }
     }
+    .blog-image {
+        margin-bottom: 30px;
+    }
 }
 
 .blog-item {
