Search and replace BT to Flagsmith New logo Started on the colours

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -39,7 +39,7 @@ $font-family-headers: 'ProximaNova-Bold', sans-serif;
 $brand-primary: #2cd6ca;
 $bt-brand-primary: #2cd6ca;
 $bt-brand-secondary: #1D2D3F;
-$bt-brand-secondary-light: #233d53;
+$bt-brand-secondary-light: #17103a;
 $bt-dark-green: #14635d;
 $bt-navy-light: #384f68;
 $bt-brand-orange: #fb9d43;
@@ -111,7 +111,7 @@ $panel-icon-background-color: #fff;
 
 
 //Panel Dark
-$panel-alt-heading-bg: #36a39c;
+$panel-alt-heading-bg: #fff;
 $panel-alt-heading-color: #fff;
 
 //TABS
