--- a/styles/project/_buttons.scss
+++ b/styles/project/_buttons.scss
@@ -8,7 +8,7 @@ a, .btn, button{
 }
 .btn, button.btn{
     outline: none !important;
-    background: #1c9997;
+    background: #6633ff;
     transition: $button-transition;
     border-radius: $border-radius-default !important;
     color:#fff;
