--- a/styles/project/_project-nav.scss
+++ b/styles/project/_project-nav.scss
@@ -2,7 +2,7 @@
     padding: 1.5rem;
 
     background-color: $bt-brand-secondary-light;
-    background: linear-gradient(to right, $bt-brand-secondary-light, #1d2d3e);
+    //background: linear-gradient(to right, $bt-brand-secondary-light, #1d2d3e);
     &.homepage {
         position: absolute;
         left:0;
