--- a/styles/project/_buttons.scss
+++ b/styles/project/_buttons.scss
@@ -8,9 +8,9 @@ a, .btn, button{
 }
 .btn, button.btn{
     outline: none !important;
-    background: #6633ff;
+    background: $bt-brand-secondary;
     transition: $button-transition;
-    border-radius: $border-radius-default !important;
+    border-radius: $btn-border-radius !important;
     color:#fff;
     text-align: center;
     border: none !important;
@@ -25,7 +25,7 @@ a, .btn, button{
     box-shadow:0 0 5px rgba(0,0,0,0.2);
 
     &:hover, &:disabled:hover {
-        background: #29aaa8;
+        background: $bt-brand-secondary-hover;
     }
     &:hover {
         box-shadow:0 0 10px rgba(0,0,0,0.5);
@@ -34,7 +34,7 @@ a, .btn, button{
         box-shadow: none;
     }
     &:active,&:focus{
-        background: #098783;
+        background: $bt-brand-secondary-active;
         box-shadow:0 0 10px rgba(0,0,0,0.5);
     }
     &.white{
