--- a/styles/project/_card.scss
+++ b/styles/project/_card.scss
@@ -25,7 +25,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        background-color: $bt-brand-secondary;
+        background-color: $bt-brand-primary;
         box-shadow: 0 5px 26px 0 rgba(0,0,0,0.28);
         border-radius: 6px;
         border: none;
