--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,73 +2,118 @@
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/variables";
 
+
 @font-face {
-  font-family: 'ProximaNova-Regular';
-  src: url('/static/fonts/proxima-nova/ProximaNova-Regular.eot?') format('eot'),
-  url('/static/fonts/proxima-nova/ProximaNova-Regular.otf')  format('opentype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Regular.woff') format('woff'),
-  url('/static/fonts/proxima-nova/ProximaNova-Regular.ttf')  format('truetype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Regular.svg#ProximaNova-Regular') format('svg');
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Regular.ttf');
+  font-weight: normal;
+  font-display:swap;
 }
 
 @font-face {
-  font-family: 'ProximaNova-Black';
-  src: url('/static/fonts/proxima-nova/ProximaNova-Black.eot?') format('eot'),
-  url('/static/fonts/proxima-nova/ProximaNova-Black.otf')  format('opentype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Black.woff') format('woff'),
-  url('/static/fonts/proxima-nova/ProximaNova-Black.ttf')  format('truetype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Black.svg#ProximaNova-Black') format('svg');
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Regular.ttf');
+  font-weight: 400;
+  font-display:swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Light.ttf');
+  font-weight: 300;
+  font-display:swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Light.ttf');
+  font-weight: 100;
+  font-display:swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Light.ttf');
+  font-weight: 200;
+  font-display:swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Light.ttf');
+  font-weight:bold;
+  font-display:swap;
 }
 
 
 @font-face {
-  font-family: 'ProximaNova-Bold';
-  src: url('/static/fonts/proxima-nova/ProximaNova-Bold.eot?') format('eot'),
-  url('/static/fonts/proxima-nova/ProximaNova-Bold.otf')  format('opentype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Bold.woff') format('woff'),
-  url('/static/fonts/proxima-nova/ProximaNova-Bold.ttf')  format('truetype'),
-  url('/static/fonts/proxima-nova/ProximaNova-Bold.svg#ProximaNova-Bold') format('svg');
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Bold.ttf');
+  font-weight:bold;
+  font-display:swap;
 }
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-SemiBold.ttf');
+  font-weight:500;
+  font-display:swap;
+}
+
+
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/static/fonts/OpenSans-Bold.ttf');
+  font-weight:600;
+  font-display:swap;
+}
+
+
 
 //Fonts
-$font-family: "Proxima Nova", sans-serif;
-$font-family-headers: 'ProximaNova-Bold', sans-serif;
+$font-family: "OpenSans", sans-serif;
+$font-family-headers: 'OpenSans', sans-serif;
 
 // COLORS
 
-$brand-primary: #2cd6ca;
-$bt-brand-primary: #2cd6ca;
-$bt-brand-secondary: #1D2D3F;
-$bt-brand-secondary-light: #17103a;
-$bt-dark-green: #14635d;
-$bt-navy-light: #384f68;
-$bt-brand-orange: #fb9d43;
-$bt-brand-red: #ff93aa;
-$bt-brand-purple: #a28af9;
-$body-text: rgba(0, 0, 0, 0.84);;
-$body-text-faint: #989ca1;
+$brand-primary: #6633ff;
+$bt-brand-primary: #6633ff;
+$bt-brand-primary-light: lighten($bt-brand-primary,0.3);
+$bt-brand-primary-lighter: lighten($bt-brand-primary,0.7);
+$bt-brand-faint: #f3ecff;
+$bt-brand-faint-hover: #eee7f6;
+
+
+$bt-brand-secondary: #f27157;
+$bt-brand-secondary-light: #f6a999;
+$bt-brand-secondary-hover: #e3674d;
+$bt-brand-secondary-active: #e3674d;
+$primary-dark: #17103a;
+
+$body-text: #242039;
+$body-text-faint: #716E86;
+
+$header-color: $body-text;
+$link-color: $body-text;
+$link-color-hover: $bt-brand-primary;
+$nav-link-color: $body-text;
+$nav-link-color-hover: $bt-brand-primary;
 
 $navbar-height: 5rem;
 
-$bt-primary-gradient: linear-gradient(#2cd6ca, #48A69D);
 
-$brand-secondary: rgb(255,152,0);
-$alert-danger-bg: rgb(248, 105, 121);
-$alert-danger-border: rgb(248, 105, 121);
+$alert-danger-bg: $bt-brand-secondary-light;
+$alert-danger-border: $bt-brand-secondary-light;
 $alert-danger-text: rgb(255, 255, 255);
 
 $body-bg: #f9f9f9;
-$list-item-striped-background: #f3f6f6;
-$navbar-background: 'transparent';
 
 //Nav
-$navbar-light-color:                 #333 !default;
-$navbar-light-hover-color: #000;
-$navbar-light-active-color:          #000;
-$navbar-light-disabled-color:        #333;
 
 // BORDER RADIUS
 $default-border-radius: 8px;
+$btn-border-radius: 8px;
 
 // INPUT
 $input-border-radius: 0px;
@@ -78,19 +123,17 @@ $input-font-size: inherit;
 $input-font-weight: 200;
 $input-border-color: rgb(224, 224, 224);
 $input-placeholder-color: rgb(224, 224, 224);
-$input-border-highlight-color: rgb(0, 188, 212);
+$input-border-highlight-color: $bt-brand-primary-light;
 
 $pagination-color: #333;
 
 //BUTTONS
-$btn-border-radius: 10px;
 $btn-height: 44px;
 $btn-secondary-bg: rgb(240, 240, 240);
 $btn-primary-bg: #009de2;
 $btn-primary-color-hover: white;
 $btn-primary-bg-hover: #008fd0;
 $btn-primary-light-bg: #61d0de;
-$link-color: #fff;
 $link-hover-color: #f1f1f1;
 $link-color-secondary: rgb(90, 90 , 90);
 $btn-default-color: white;
@@ -136,8 +179,8 @@ $border-radius-default: 8px;
 //TRANSITIONS
 $button-transition: background-color 400ms cubic-bezier(0.23, 1, 0.32, 1);
 //Hero
-$hero-bg:#22354a;
-$hero-bg-dark:darken(#22354a,5);
+$navbar-background: 'transparent';
+$hero-bg:#ffffff;
 
 //Aside
 $aside-bg:#22354a;
