--- a/styles/project/_HomePage.scss
+++ b/styles/project/_HomePage.scss
@@ -1,39 +1,7 @@
 h2 {
-    color: #1c2b3d;
+    color: $header-color;
     margin-bottom: 20px;
 }
-
-//.homepage-icon {
-//    color: #d9d9d9;
-//    font-size: 2em;
-//    display: block;
-//}
-
-
-//.homepage-features {
-//    margin-top: 50px;
-//
-//    > div {
-//        text-align: center;
-//        margin: 0 auto;
-//
-//        h5 {
-//            font-weight: 500 !important;
-//            font-size: 1rem;
-//        }
-//
-//        p {
-//            color: #22354a;
-//            opacity: 0.85;
-//            font-size: 15px;
-//            font-family: 'Roboto', sans-serif;
-//        }
-//    }
-//
-//    ion {
-//        color: #2cd6ca;
-//    }
-//}
 
 .upcoming {
     margin-top: 20px;
