--- a/styles/project/_project-nav.scss
+++ b/styles/project/_project-nav.scss
@@ -1,7 +1,7 @@
 .navbar {
     padding: 1.5rem;
 
-    background-color: $bt-brand-secondary-light;
+    background-color: $navbar-background;
     //background: linear-gradient(to right, $bt-brand-secondary-light, #1d2d3e);
     &.homepage {
         position: absolute;
@@ -25,9 +25,10 @@
     font-size: 1.2rem;
     font-weight: 400;
     margin-right: 1rem;
+    color: $nav-link-color;
     @include transition(opacity, 200ms);
     &:hover {
-        color: white;
+        color: $nav-link-color-hover;
     }
     &.nav-faint {
         opacity: 0.5;
@@ -36,8 +37,12 @@
         }
     }
     .nav-link-featured {
-        border-radius: 5px;
-        border: 1px solid rgba(255,255,255,.5);
+        border-radius: $btn-border-radius;
+        background-color: $bt-brand-faint;
+        &:hover {
+            background-color: $bt-brand-faint-hover;
+        }
+        color: $bt-brand-primary;
         padding: 5px 20px;
         -moz-transition:    opacity 200ms;
         -o-transition:      opacity 200ms;
