--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -48,14 +48,16 @@
     }
   }
   .companies {
-    h2 {
+    background-color: white;
+    p {
       margin-top: -1px;
       margin-bottom: 10px;
-      font-size: 22px;
+      color: $body-text;
+      font-weight: 600;
     }
     padding: 0 0 40px 0;
-    background-color: white;
     img {
+      //filter: grayscale(100%) brightness(1);
       &.pad {
         padding: 10px;
       }
@@ -63,7 +65,6 @@
     }
     p {
       width: 100%;
-      color: $body-text;
     }
     .row > div {
       margin: 0 auto;
