--- a/styles/project/_forms.scss
+++ b/styles/project/_forms.scss
@@ -30,9 +30,14 @@
     height:50px;
 
     input.input{
-        border:1px solid #d6dbe0!important;
-        border-radius: 8px;
-        color:#2e2e2e;
+        border:1px solid $bt-input-border!important;
+        background-color: $bt-input-background !important;
+        @include transition(all 200ms);
+        &:focus {
+            border:1px solid $bt-input-border-active!important;
+        }
+        border-radius: $border-radius-default;
+        color:$body-text;
         text-indent: 15px;
         height:50px;
 
@@ -53,32 +58,15 @@
 
 .homepage{
     .input-container{
-        background-color:transparent;
         margin-bottom:20px;
-
-        input.input{
-            height:50px;
-            //border-radius: 25px;
-            background-color:transparent!important;
-            border:1px solid rgba(255,255,255,0.5)!important;
-            text-indent: 15px;
-            color:#fff;
-
-            &::placeholder{
-                color:rgba(255,255,255,0.75);
-            }
-        }
     }
 
     .form-cta{
         text-align: center;
         .btn{
+            color:#fff;
             margin-bottom:10px;
             height: 44px;
-            &:hover{
-                background:darken(#fff,5);
-                color:#000;
-            }
         }
     }
 }
