--- a/styles/project/_card.scss
+++ b/styles/project/_card.scss
@@ -26,6 +26,9 @@
         flex-direction: column;
         text-align: center;
         background-color: $bt-brand-primary;
+        a {
+            color: white;
+        }
         box-shadow: 0 5px 26px 0 rgba(0,0,0,0.28);
         border-radius: 6px;
         border: none;
