--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -39,7 +39,7 @@
   .hero-inner {
     padding-top: 0.1rem;
     padding-bottom: 10%;
-    background-color: $hero-bg;
+    background-color: $bt-gradient-start;
     //background: linear-gradient(to right, $bt-brand-secondary-light, #1d2d3e);
     &:after {
       content: " ";
