--- a/styles/project/_TermsPoliciesPage.scss
+++ b/styles/project/_TermsPoliciesPage.scss
@@ -1,11 +1,11 @@
 .legal-container {
-	background:#f9f9f9;
+	background:$bt-brand-faint-alt;
 	padding: 100px 0;
 }
 
 footer.legalpage{
-	background: $hero-bg;
-	color:white;
+	background: $bt-gradient-start;
+	color:$bt-gradient-text;
 	padding:50px 50px 50px 250px;
 
 
