--- a/styles/project/_section.scss
+++ b/styles/project/_section.scss
@@ -5,7 +5,7 @@
         padding-bottom: 3em;
     }
     &--grey {
-        background-color: #f9f9f9;
+        background-color: $bt-brand-faint-alt;
     }
     &--wave {
         &__title {
