--- a/styles/project/_card.scss
+++ b/styles/project/_card.scss
@@ -8,7 +8,7 @@
         }
     }
     &--navy {
-        background: #252F35;
+        background: $bt-brand-primary-dark;
         box-shadow: 0 5px 25px 0 rgba(0,0,0,0.28);
         border-radius: 4px;
         pre {
