--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -170,8 +170,8 @@ $panel-alt-heading-color: #fff;
 
 //TABS
 $tab-inactive-color: rgba(255, 255, 255, .75);
-$tab-active-color: #36a39c;
-$tab-line-color: #36a39c;
+$tab-active-color: $bt-brand-primary;
+$tab-line-color: $bt-brand-primary;
 
 //SCAFFOLDING
 $mobile-portrait: 320px;
