--- a/styles/components/_index.scss
+++ b/styles/components/_index.scss
@@ -3,6 +3,7 @@
 //@import 'switch';
 //@import 'star-rating';
 //@import 'aside';
+@import 'tabs';
 @import 'input';
 @import 'panel';
 @import 'hero';
