--- a/styles/components/_panel.scss
+++ b/styles/components/_panel.scss
@@ -13,7 +13,7 @@
 		transition: .2s;
 		.panel-content {
 			h2 {
-				color: $bt-brand-secondary;
+				//color: $bt-brand-secondary;
 				//text-decoration: none;
 			}
 			.technology-name {
