--- a/styles/project/_card.scss
+++ b/styles/project/_card.scss
@@ -22,10 +22,11 @@
         word-wrap: break-word;
     }
     &--feature {
+        cursor: default;
         display: flex;
         flex-direction: column;
         text-align: center;
-        background-color: $bt-brand-primary;
+        background-color: $bt-brand-primary-dark;
         a {
             color: white;
         }
@@ -44,7 +45,7 @@
             transform: scale(1.1);
             background-color: $bt-brand-primary;
             .card__title, .card__paragraph-text, .card__link, .card__icon {
-                color: $bt-brand-secondary;
+                color: white;
             }
         }
     }
