--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -152,3 +152,27 @@ hr {
         margin-bottom: 0;
     }
 }
+
+.bottom-banner {
+    position: fixed;
+    left: 0;
+    bottom: 20px;
+    margin: auto;
+    height: 44px;
+    line-height: 44px;
+    right: 0;
+    text-align: center;
+    .inner {
+        color: $body-text-faint;
+        a {
+            font-weight: 500;
+            color: $bt-brand-primary;
+        }
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 44px;
+        background-color: white;
+        display: inline-block;
+        box-shadow: rgba(75, 75, 75, 0.21) 0px 1px 6px, rgba(75, 75, 75, 0.21) 0px 1px 4px;
+    }
+}
