--- a/styles/project/_buttons.scss
+++ b/styles/project/_buttons.scss
@@ -23,8 +23,12 @@ a, .btn, button{
     font-size: 16px;
     height:$input-height;
     box-shadow:0 0 5px rgba(0,0,0,0.2);
-
+    &--small {
+        height: 32px;
+        line-height: 32px;
+    }
     &:hover, &:disabled:hover {
+        color: $btn-default-color;
         background: $bt-brand-secondary-hover;
     }
     &:hover {
