--- a/styles/project/_buttons.scss
+++ b/styles/project/_buttons.scss
@@ -115,3 +115,60 @@ a, .btn, button{
         border-top-left-radius:0!important;
     }
 }
+
+
+
+@import "../variables";
+
+$google: #c53d23;
+$github: #eeefee;
+
+button.btn, a.btn {
+    &__oauth {
+        margin-right: 20px;
+        &:last-child {
+            margin-right: 0;
+        }
+        border-radius: $border-radius-default;
+        display: inline-block;
+        color: #000 !important;
+        font-weight: bold;
+        width: 265px;
+        text-transform: none !important;
+        &:hover {
+            text-decoration: none;
+        }
+        user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        -moz-user-select: none;
+        img {
+            height: 24px;
+        }
+        margin-top: 10px;
+        margin-bottom: 20px;
+        &--github {
+            background: $github;
+            &:hover {
+                background: darken($github, 5);
+            }
+        }
+        &--google {
+            background: $google !important;
+            color:white !important;
+            &:hover, &:active, &:focus {
+                background: lighten($google, 5) !important;
+            }
+        }
+        &--microsoft {
+            background: #339af4;
+            color: white !important;
+            &:hover {
+                background: #327ed6;
+            }
+            img{
+                height: 20px;
+            }
+        }
+    }
+}
