--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -79,6 +79,7 @@ $font-family-headers: 'OpenSans', sans-serif;
 
 $brand-primary: #6633ff;
 $bt-brand-primary-dark: #17103a;
+$bt-brand-tertiary: #f18e7f;
 
 $bt-brand-primary: #6633ff;
 $bt-brand-primary-light: lighten($bt-brand-primary,40);
