--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,70 +5,84 @@
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Regular.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Regular.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Regular.woff') format('woff');
   font-weight: normal;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Regular.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Regular.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Regular.woff') format('woff');
   font-weight: 400;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Light.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Light.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Light.woff') format('woff');
   font-weight: 300;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Light.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Light.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Light.woff') format('woff');
   font-weight: 100;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Light.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Light.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Light.woff') format('woff');
   font-weight: 200;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Light.ttf');
-  font-weight:bold;
-  font-display:swap;
-}
-
-
-@font-face {
-  font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Bold.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Light.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Light.woff') format('woff');
   font-weight:bold;
   font-display:swap;
 }
 
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-SemiBold.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Bold.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Bold.woff') format('woff');
+  font-weight:bold;
+  font-display:swap;
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-SemiBold.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-SemiBold.woff') format('woff');
   font-weight:500;
   font-display:swap;
 }
 
-
-
 @font-face {
   font-family: 'OpenSans';
-  src: url('/static/fonts/OpenSans-Bold.ttf');
+  src: local('OpenSans'), local('OpenSans'),
+  url('/static/fonts/OpenSans-Bold.woff2') format('woff2'),
+  url('/static/fonts/OpenSans-Bold.woff') format('woff');
   font-weight:600;
   font-display:swap;
 }
-
 
 
 //Fonts
