--- a/styles/components/_index.scss
+++ b/styles/components/_index.scss
@@ -1,9 +1,10 @@
 //@import 'list-item';
-//@import 'paging';
+//@import 'paging';O
 //@import 'switch';
 //@import 'star-rating';
 //@import 'aside';
 @import 'tabs';
 @import 'input';
+@import 'blog-hero';
 @import 'panel';
 @import 'hero';
