--- a/styles/project/_blog.scss
+++ b/styles/project/_blog.scss
@@ -26,7 +26,6 @@
             color: #666;
         }
     }
-    font-size: 21px;
     line-height: 1.58;
     text-rendering:optimizelegibility;
     word-break:break-word;
@@ -58,14 +57,32 @@
 }
 
 .blog-item {
-    box-shadow: 0 2px 12px 0 rgba(119, 119, 119, 0.35);
-    border-radius: 8px;
-    margin-bottom: 3em;
-    font-size: 21px;
-    .blog-item-content {
-        padding: 20px;
+    border-bottom: 2px solid #979797;
+    margin-bottom: 64px;
+    padding-bottom: 32px;
+    .avatar {
+        width: 120px;
+        height: 120px;
+        border-radius: 60px;
     }
-    h1, h2, h3, p,a  {
+    .avatar-small {
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+    }
+
+    .title {
+        font-weight: bold;
+        font-family: $font-family-alt;
+        line-height: 18px;
+        margin-top: 3px;
+        color: $bt-brand-primary-dark;
+        font-size: 24px;
+    }
+    .blog-item-content {
+        padding-bottom: 20px;
+    }
+    h1, h2, h3, a  {
         color: rgba(0, 0, 0, 0.84);
         margin-block-start: 0px;
         margin-block-end: 0px;
@@ -102,7 +119,7 @@
         background-color: #222222;
         color: #60daf6;
     }
-    &.react_native {
+    &.react-native {
         background-color: #0ec7f8;
         color: #fff;
     }
@@ -112,6 +129,14 @@
     }
     &.webdev {
         background-color: #4c235a;
+        color: #fff;
+    }
+    &.new-feature, &.release {
+        background-color: $bt-brand-tertiary;
+        color: #fff;
+    }
+    &.podcast {
+        background-color: $bt-brand-primary;
         color: #fff;
     }
     &.productivity {
@@ -126,9 +151,17 @@
         background-color: #356fa0;
         color: #f8c93f;
     }
-    &.bullet-train {
+    &.bullet-train,&.flagsmith {
+        background-color: $bt-brand-primary;
+        color: white;
+    }
+    &.customer-story {
         background-color: $bt-brand-secondary;
-        color: $bt-brand-primary;
+        color: white;
+    }
+    &.thoughts {
+        background-color: #f6f6f6;
+        color: $body-text;
     }
     &.docker {
         background-color: white;
@@ -137,5 +170,43 @@
     }
     &:hover {
         text-decoration: underline;
+    }
+}
+
+
+.player-panel {
+    background-color: #FAF7FF;
+    font-size: 24px;
+    .episode-number {
+        color: $brand-primary;
+    }
+    .duration {
+        font-size: 16px;
+        color: $bt-brand-primary-dark;
+    }
+    .play-button {
+        background-color: #EAE7F6;
+        width: 90px;
+        height: 85px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .play-button-container {
+            width: 32px;
+            height: 32px;
+            padding: 5px;
+            border-radius: 16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $brand-primary;
+            svg {
+                height: 20px;
+                margin-left: 2px;
+                path {
+                    fill: #EAE7F6;
+                }
+            }
+        }
     }
 }
