--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -21,6 +21,8 @@
   }
   h1 {
     margin-top: 0;
+    font-family: $font-family-alt;
+    color: $bt-brand-primary-dark;
   }
   .homepage-wave {
     pointer-events: none;
